.bin/iptables-generate-edge
#!/bin/bash

EXTIF="enp6s0"
EXTIF6="sixxs"
INTIF="enp7s0"


LOGDROPLIMIT="2/s"
LOGDROPLIMITBURST="10"

cat >/etc/iptables/iptables.rules.new  <<EOF
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:sshguard - [0:0]
:LOGDROP - [0:0]
:LOGACCEPT - [0:0]

-A LOGDROP -p tcp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "TCP LOGDROP: "
-A LOGDROP -p udp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "UDP LOGDROP: "
-4 -A LOGDROP -p icmp   -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "ICMP LOGDROP: "
-6 -A LOGDROP -p icmpv6 -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "ICMP LOGDROP: "
-4 -A LOGDROP -f -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "FRAGMENT LOGDROP: "
-A LOGDROP -j DROP

-A LOGACCEPT -p tcp -j LOG --log-prefix "TCP LOGACCEPT: "
-A LOGACCEPT -p udp -j LOG --log-prefix "UDP LOGACCEPT: "
-4 -A LOGACCEPT -p icmp   -j LOG --log-prefix "ICMP LOGACCEPT: "
-6 -A LOGACCEPT -p icmpv6 -j LOG --log-prefix "ICMP LOGACCEPT: "
-4 -A LOGACCEPT -f -j LOG --log-prefix "FRAGMENT LOGACCEPT: "
-A LOGACCEPT -j ACCEPT



# Bad v6 Stuff
-6 -A INPUT   -m rt --rt-type 0 -j DROP
-6 -A FORWARD -m rt --rt-type 0 -j DROP
-6 -A OUTPUT  -m rt --rt-type 0 -j DROP



# Loopback is always okay
-A INPUT -i lo -j ACCEPT

# Internal network traffic is always okay
-A INPUT -i $INTIF -j ACCEPT

# Any incoming not headed for the external IP drop (actually I don't want to
# need EXTIP if I don't need it )
#-4 -A INPUT -i $EXTIF  ! -d $EXTIP  -j DROP
#-6 -A INPUT -i $EXTIF6 ! -d $EXTIP6 -j DROP
-4 -A INPUT -i $EXTIF -d 10.0.0.0/8 -j DROP
-4 -A INPUT -i $EXTIF -d 172.16.0.0/12 -j DROP
-4 -A INPUT -i $EXTIF -d 192.168.0.0/16 -j DROP

# Time Warner Cable's IPv6 is horribly terribly disgustingly broken
-6 -A INPUT -i $EXTIF -j DROP

# SSHGuard, block all traffic from sources that trip sshguard
-A INPUT -j sshguard

# Existing connections are fine
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Drop ping, allow other ICMP
-4 -A INPUT -p icmp --icmp-type echo-request -j LOGDROP
-4 -A INPUT -p icmp -j ACCEPT
-6 -A INPUT -p icmpv6 --icmpv6-type echo-request -j LOGDROP
-6 -A INPUT -p icmpv6 -j ACCEPT

# DHCP client
-4 -A INPUT -i $EXTIF -p tcp --dport 68 -j ACCEPT
-4 -A INPUT -i $EXTIF -p udp --dport 68 -j ACCEPT
-6 -A INPUT -i $EXTIF -p tcp --dport 546 -j ACCEPT
-6 -A INPUT -i $EXTIF -p udp --dport 546 -j ACCEPT
# DHCP server
-4 -A INPUT -i $INTIF -p tcp --dport 67 -j ACCEPT
-4 -A INPUT -i $INTIF -p udp --dport 67 -j ACCEPT
-6 -A INPUT -i $INTIF -p tcp --dport 547 -j ACCEPT
-6 -A INPUT -i $INTIF -p udp --dport 547 -j ACCEPT

# SSH server
-A INPUT -p tcp --dport 22 -j ACCEPT

# TFTP server
-4 -A INPUT -i $INTIF -p udp --dport 69 -s 10.0.0.0/8 -j ACCEPT

# http/s
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# identd
-A INPUT -p tcp --dport 113 -j ACCEPT

# smbd
-4 -A INPUT -i $INTIF -p tcp --dport 139 -s 10.0.0.0/8 -j ACCEPT
-4 -A INPUT -i $INTIF -p tcp --dport 445 -s 10.0.0.0/8 -j ACCEPT

# nxt-client
-A INPUT -p tcp --dport 7876 -j ACCEPT

# darkhttpd
-4 -A INPUT -p tcp --dport 8080 -j ACCEPT

# cjdns
-4 -A INPUT -p udp --dport 25138 -j ACCEPT

# Minecraft server
-A INPUT -p tcp --dport 25565 -j ACCEPT
-A INPUT -p udp --dport 25565 -j ACCEPT

# mosh
-A INPUT -p udp --dport 60000:61000 -j ACCEPT

# New ones are too unless they're from outside # wat?
#-A INPUT -m conntrack --ctstate NEW ! -i $EXTIF -j ACCEPT



# Forwarding existing connections is fine
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Internal network to anywhere is fine
-A FORWARD -i $INTIF -j ACCEPT

# Don't forward traffic from outside to outside
-A FORWARD -i $EXTIF    -o $EXTIF    -j DROP
-A FORWARD -i $EXTIF6   -o $EXTIF6   -j DROP



# Block youtube CDN crap
#-A OUTPUT -d 206.111.0.0/16 -j REJECT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Port forwards
-4 -A PREROUTING -p tcp --dport 23 -j DNAT --to 10.0.0.22:22
-4 -A PREROUTING -p tcp --dport 25565 -j DNAT --to 10.0.0.22
-4 -A PREROUTING -p udp --dport 25565 -j DNAT --to 10.0.0.22

# Masquerade outgoing for NAT
-4 -A POSTROUTING ! -o lo -j MASQUERADE

COMMIT

*mangle
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

COMMIT
EOF

cat <<EOF
- Enable failsafe in crontab
- Use iptables-restore AND ip6tables-restore on /etc/iptables/iptables.rules.new
- Test stuff
- Move iptables.rules.new to iptables.rules
- Turn off crontab failsafe
- Restart sshguard so it'll re-block continuing offenders
EOF
